Sensor updated to use UUID